--- a/style.css
+++ b/style.css
@@ -124,8 +124,11 @@ header > .banner .banner-container {
   border-radius: 8px;
   width: 60%;
   background: rgba(255, 255, 255, 0.3);
-  margin-left: 220px;
   padding: 0 15px;
+}
+header > .banner .content {
+  display: flex;
+  justify-content: center;
 }
 header > .banner .banner-container > input,
 .select-box {
@@ -268,6 +271,7 @@ header > .banner .banner-container > .btn-common {
 #cliant-review > .cliant-review-content > button {
   background-color: #fff;
   border: 1px solid #ff5400;
+  border-radius: 8px;
   padding: 10px 15px;
   margin: 20px 0;
 }
@@ -458,13 +462,14 @@ footer > .copyright-text {
     width: 170px;
   }
   header > .banner .banner-container {
-    display: inline;
+    flex-direction: column;
+    gap: 0;
     margin: 0;
     padding: 10px;
     align-items: center;
-    position: relative;
-    left: 55px;
-    top: 50px;
+  }
+  header > .banner .banner-container > .btn-common {
+    margin: 0;
   }
   #populer-tour,
   #news-letter {
