--- a/style.css
+++ b/style.css
@@ -256,6 +256,66 @@ header > .banner .banner-container > .btn-common {
   justify-content: center;
 }
 
+/* deals section */
+#deals {
+  padding: 10px 80px;
+  text-align: center;
+}
+#deals > p {
+  padding: 0 210px;
+}
+#deals > .img-1 {
+  background-image: url(Images/Group\ 39.png);
+  justify-content: end;
+}
+#deals > .img-2 {
+  background-image: url(Images/Group\ 40.png);
+  justify-content: start;
+}
+#deals > .img-3 {
+  background-image: url(Images/Group\ 39.png);
+  justify-content: end;
+}
+#deals > .img-container {
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 500px;
+  border-radius: 16px;
+  display: flex;
+  align-items: center;
+  text-align: start;
+  margin: 30px 0;
+}
+
+#deals > .img-container > .img-text {
+  width: 45%;
+  border: none;
+  border-radius: 16px;
+  border: 2px solid #fff;
+  background: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(2.5px);
+  padding: 30px;
+  margin: 50px;
+}
+#deals > .img-container > .img-text > h4 {
+  color: #ff5400;
+}
+#deals > .img-container > .img-text > p {
+  display: flex;
+  gap: 5px;
+}
+#deals > .img-container > .img-text > p > span {
+  padding-right: 10px;
+}
+#deals button {
+  border: none;
+  color: #fff;
+  border-radius: 8px;
+  background: #ff5400;
+  padding: 10px 15px;
+}
+
 /* cliant-review section  */
 
 #cliant-review > .title {
@@ -519,8 +579,25 @@ footer > .copyright-text {
   #why-choose-us .card {
     width: 320px;
   }
+
+  #deals {
+    padding: 10px 20px;
+  }
+  #deals > p {
+    padding: 0 20px;
+  }
+  #deals > .img-container {
+    padding: 10px 0px;
+  }
+  #deals > .img-container > .img-text {
+    width: 100%;
+    padding: 5px;
+  }
+  #deals > .img-container > .img-text > p {
+    flex-wrap: wrap;
+  }
   #cliant-review {
-    padding: 20px 5px;
+    padding: 10px 20px;
   }
   #cliant-review > p {
     padding: 0 12px;
